--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_STATIC_URL = http://localhost:8000/static/
+REACT_APP_GOOGLE_CLIENT_ID = 448256840624-8985bu3vjtkueun47u13um34m020mbkl.apps.googleusercontent.com
+REACT_APP_API_URL = http://localhost:8000/api
